<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ff000000">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/app_name_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#ffa500"
        android:textSize="@dimen/abc_text_size_display_3_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_limit"
        android:id="@+id/time_limit_label"
        android:layout_below="@+id/app_name_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/time_limit_label"
        android:layout_above="@+id/tap_to_change_label"
        android:background="#ff2b2b2b">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner1"
            android:layout_weight="9"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner2"
            android:layout_weight="9" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
            android:text=":"
            android:id="@+id/colon_label"
            android:layout_weight="4"
            android:textColor="#ffffffff"
            android:gravity="center"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner3"
            android:layout_weight="9" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner4"
            android:layout_weight="9" />
    </LinearLayout>

    <EditText
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:id="@+id/player1_editText"
        android:background="#ffe1e1e1"
        android:inputType="text"
        android:minWidth="100dp"
        android:text="@string/player1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="12"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/time_limit_label"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:id="@+id/player2_editText"
        android:background="#ffe1e1e1"
        android:inputType="text"
        android:minWidth="100dp"
        android:text="@string/player2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:maxLength="12"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_alignTop="@+id/player1_editText"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tap_to_change"
        android:id="@+id/tap_to_change_label"
        android:textColor="#ffffffff"
        android:layout_alignBottom="@+id/player1_editText"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/go_button"
        android:textColor="#ffffffff"
        android:background="#ffa500"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/tap_to_change_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

</RelativeLayout>